feat: Initial release of usb_debug_blocker Flutter plugin
- Added plugin to check Developer Options, USB connection, and MTP mode on Android.
- Implemented platform-specific Kotlin code and MethodChannel integration.
- Created Dart wrapper methods: isDeveloperOptionsEnabled(), isUsbConnected(), isMtpModeEnabled().
- Wrote unit tests using mock method handlers for all methods.
- Added example app demonstrating plugin usage with UI display.
- Configured Android NDK version (27.0.12077973) in example project.
- Removed deprecated package attribute from AndroidManifest.xml.
- All tests pass and example runs correctly, showing real values.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: usb_debug_blocker
 description: A Flutter plugin to detect Developer Options, USB connection, and MTP mode on Android devices.
 version: 0.0.1
-homepage: https://github.com/mohanveera/usb_debug_blocker  # Update if you use a real repo
+homepage: https://github.com/mohanveera9/usb_debug_blocker.git
 
 environment:
   sdk: ^3.8.1
